Fix scrollbars display on Windows/Linux (#8686)
* Fix scrollbars on non macOS devices

* Fix trending communities x overflow

* Fix scroll hidden behind breadcrumbs component

* Updated breadcrumbs width

--- a/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWSelectList/CWSelectList.scss
+++ b/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWSelectList/CWSelectList.scss
@@ -104,7 +104,6 @@
       box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 
       .cwsl__menu-list {
-        @include scrollbarStyles;
         overflow: auto;
         padding: 8px;
 
